Міграція на іншу бібліотеку для роботи з Serial Port. Jssc не білдиться нормально через jlink в модульному проекті....